--- a/style.css
+++ b/style.css
@@ -33,12 +33,6 @@ section.alternate-background {
 
 main img {
   width: 100%;
-  padding-bottom: 10px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0px;
 }
 
 /* ---  Groups & Items --- */
@@ -79,6 +73,7 @@ header nav {
 header nav ul {
   display: flex;
   padding-left: 0;
+  list-style-type: none;
 }
 
 header nav ul li a {
@@ -96,6 +91,10 @@ header nav ul li a:hover {
 form {
   border: 2px solid #6b1a22;
   padding: 10px;
+}
+
+form ul {
+  padding: 0px;
 }
 
 form li {
@@ -135,3 +134,9 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+
+@media all and (min-width: 800px) {
+  .group {
+    flex-direction: row;
+  }
+}
