Upscaled header nav for desktop, now I want to center align flex items

--- a/style.css
+++ b/style.css
@@ -136,6 +136,14 @@ footer p {
 /* -------  Media Query ------- */
 
 @media all and (min-width: 800px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+  .logo {
+    font-size: 48px;
+  }
   .group {
     flex-direction: row;
   }
