Made more responsive by using fit-content and adding some more flex elements

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Lato", sans-serif;
   color: #6b1a22;
+  width: fit-content;
 }
 
 h2 {
@@ -56,8 +57,9 @@ main img {
 
 header {
   background-color: #83092e;
-  padding: 20px 20px 0 20px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
@@ -65,6 +67,9 @@ header {
   font-size: 72px;
   color: #ecdbc9;
   user-select: none;
+  display: flex;
+  justify-content: center;
+  padding-right: 18px;
 }
 
 header nav {
@@ -137,16 +142,20 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-
+/*Breakpoint for navbar at 480*/
 @media all and (min-width: 480px) {
   header {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     padding: 10px;
   }
   .logo {
     font-size: 48px;
+    justify-content: flex-start;
   }
+}
+/*Breakpoint for desktop at 800 to ensure that tablet view maintains the vertical flow*/
+@media all and (min-width: 800px) {
   .group {
     flex-direction: row;
   }
